# peg-e

./: CMakeLists.txt  CREDITS  ChangeLog  NEWS  README  mac_deploy.sh  peg-e.pro  windows_deploy.bat
doc/: Doxyfile  peg-e.6
icons/: icon.qrc  icon.rc  peg-e.appdata.xml  peg-e.appdata.xml.in  peg-e.desktop  peg-e.desktop.in  peg-e.icns  peg-e.xpm
icons/oxygen/hicolor/: index.theme
icons/po/: LINGUAS  cs.po  de.po  description.pot  el.po  eo.po  es.po  fr.po  he.po  lt.po  ms.po  nl.po  pl.po  pt.po  ro.po  ru.po  sv.po  te.po  tr.po  update-po.sh  update-pot.sh  zh.po
mac/: Info.plist.in
src/: board.cpp  board.h  hole.cpp  hole.h  locale_dialog.cpp  locale_dialog.h  main.cpp  movement.cpp  movement.h  peg.cpp  peg.h  puzzle.cpp  puzzle.h  window.cpp  window.h
translations/: pege_cs.qm  pege_cs.ts  pege_de.qm  pege_de.ts  pege_el.qm  pege_el.ts  pege_en.ts  pege_eo.ts  pege_es.qm  pege_es.ts  pege_fr.qm  pege_fr.ts  pege_he.qm  pege_he.ts  pege_he_IL.qm  pege_he_IL.ts  pege_lt.qm  pege_lt.ts  pege_ms.qm  pege_ms.ts  pege_nl.qm  pege_nl.ts  pege_pl.qm  pege_pl.ts  pege_pt.ts  pege_ro.qm  pege_ro.ts  pege_ru.qm  pege_ru.ts  pege_sv.ts  pege_te.ts  pege_tr.qm  pege_tr.ts  pege_zh.ts
windows/: installer.nsi  removeprevious.nsh
